all-in-one.yml
apiVersion: v1
kind: Namespace
metadata:
  name: app-ns
---
# ONLINE SHOP
apiVersion: apps/v1
kind: Deployment
metadata:
  name: online-shop-deployment
  namespace: app-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: online-shop
  template:
    metadata:
      labels:
        app: online-shop
    spec:
      containers:
        - name: online-shop
          image: johncorner158/online_shop_app:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: online-shop-svc
  namespace: app-ns
spec:
  selector:
    app: online-shop
  ports:
    - port: 80
      targetPort: 80
---
# NGINX
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: app-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: app-ns
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
---
# APACHE
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  namespace: app-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: httpd:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: apache-svc
  namespace: app-ns
spec:
  selector:
    app: apache
  ports:
    - port: 80
      targetPort: 80
